# ads-unisantos

Algoritimos/: pyproject.toml
Algoritimos/algorithms/: at1.py  diego_at1_algoritimo.txt  example.py  example2.py
Arquitetura de Sistemas/: settings.gradle
Arquitetura de Sistemas/app/: build.gradle
Arquitetura de Sistemas/app/src/main/java/arquitetura/de/sistemas/: App.java  Celular.java
Estrutura de Dados/: README.md  main.py  pyproject.toml
Estrutura de Dados/Unidade 2 - Listas sequenciais (estáticas e dinâmicas)/: fila.js  lista.py  matriz.py  pilha.js
Estrutura de Dados/Unidade 3 - Listas encadeadas simples/: linked_list.py
Estrutura de Dados/data_structure/examples/: carro.py
Estrutura de Dados/data_structure/exercises/: atividade_avaliativa_at1.py
Estrutura de Dados/data_structure/lesson_2/: classe_nodo.py
Estrutura de Dados/src/data_structure/classes/: linked_list.py
Estrutura de Dados/src/data_structure/lesson_2/: arvore.js  vetor.py
Estrutura de Dados/src/data_structure/lesson_3/: example.py
IntegracaoDeSistemas/unidade1/: curriculum-vitae.html  referencias.html
Programacao Orientada a Objetos/unidade-1/: MainClass.java
Programacao Orientada a Objetos/unidade2/: AreaCirculo.java  AtributosDeClasse.java  AtributosEMetodos.java  BankAccount.java  Conta.java  DicaProfessor.java  Estoque.java  Financial.java  TesteMetodoStatic.java
Programacao Orientada a Objetos/unidade2/Enums/: AccountType.java
ProgramacaoBackend/: code.c  escopo.py  simulador_respostas.py  uso_do_map.py
(+1 files in other folders)
