[tool.poetry]
name = "algorithms"
version = "0.1.0"
description = "Python programs for the Algorithms subject"
authors = ["diogoditorr <35296262+diogoditorr@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
autopep8 = "^2.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
