[tool.poetry]
name = "data-structure"
version = "0.1.0"
description = ""
authors = ["diogoditorr <35296262+diogoditorr@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "data_structure"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
